--- a/hw1/hw1-pset.ipynb
+++ b/hw1/hw1-pset.ipynb
@@ -213,19 +213,16 @@
       "   3.8676e+00 -1.6130e-01 -1.3273e-01 -6.8881e-01  1.8444e-01  5.2464e-03\n",
       "  -3.3874e-01 -7.8956e-02  2.4185e-01  3.6576e-01 -3.4727e-01  2.8483e-01\n",
       "   7.5693e-02 -6.2178e-02 -3.8988e-01  2.2902e-01 -2.1617e-01 -2.2562e-01\n",
-      "  -9.3918e-02 -8.0375e-01]]\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'h'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(embeddings[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthe\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mof\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# This line of code doesn't work:\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43membeddings\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mthe\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "File \u001b[0;32m~/Documents/github/nlu_s25/hw1/embeddings.py:45\u001b[0m, in \u001b[0;36mEmbeddings.__getitem__\u001b[0;34m(self, words)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, words: Iterable[\u001b[38;5;28mstr\u001b[39m]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m np\u001b[38;5;241m.\u001b[39mndarray:\n\u001b[1;32m     38\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;124;03m    Retrieves embeddings for a list of words.\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;124;03m        for each i, the ith row is the embedding for words[i]\u001b[39;00m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvectors[\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindices\u001b[49m\u001b[43m[\u001b[49m\u001b[43mword\u001b[49m\u001b[43m]\u001b[49m] \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m words])\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'h'"
+      "  -9.3918e-02 -8.0375e-01]]\n",
+      "[[ 4.1800e-01  2.4968e-01 -4.1242e-01  1.2170e-01  3.4527e-01 -4.4457e-02\n",
+      "  -4.9688e-01 -1.7862e-01 -6.6023e-04 -6.5660e-01  2.7843e-01 -1.4767e-01\n",
+      "  -5.5677e-01  1.4658e-01 -9.5095e-03  1.1658e-02  1.0204e-01 -1.2792e-01\n",
+      "  -8.4430e-01 -1.2181e-01 -1.6801e-02 -3.3279e-01 -1.5520e-01 -2.3131e-01\n",
+      "  -1.9181e-01 -1.8823e+00 -7.6746e-01  9.9051e-02 -4.2125e-01 -1.9526e-01\n",
+      "   4.0071e+00 -1.8594e-01 -5.2287e-01 -3.1681e-01  5.9213e-04  7.4449e-03\n",
+      "   1.7778e-01 -1.5897e-01  1.2041e-02 -5.4223e-02 -2.9871e-01 -1.5749e-01\n",
+      "  -3.4758e-01 -4.5637e-02 -4.4251e-01  1.8785e-01  2.7849e-03 -1.8411e-01\n",
+      "  -1.1514e-01 -7.8581e-01]]\n"
      ]
     }
    ],
@@ -380,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "551b88b7",
    "metadata": {},
    "outputs": [
@@ -440,9 +437,9 @@
     {
      "data": {
       "text/plain": [
-       "[['ii', 'king', 'queen', 'prince'],\n",
-       " ['man', 'woman', 'boy', 'another'],\n",
-       " ['woman', 'girl', 'man', 'mother']]"
+       "[['ii', 'queen', 'prince', 'king'],\n",
+       " ['another', 'boy', 'woman', 'man'],\n",
+       " ['mother', 'man', 'girl', 'woman']]"
       ]
      },
      "execution_count": 11,
@@ -483,7 +480,7 @@
     {
      "data": {
       "text/plain": [
-       "[['prince', 'queen', 'daughter', 'king']]"
+       "[['prince', 'daughter', 'queen', 'king']]"
       ]
      },
      "execution_count": 12,
@@ -614,6 +611,82 @@
     "\n",
     "<a name=\"cite_note-3\"></a>3. [<sup>^</sup>](#cite_ref-3) Obviously, these line numbers may be inaccurate if you have already started working on Problem 3."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "381de270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define semantic relationship type keys\n",
+    "test_data = load_analogies(\"data/analogies.txt\")\n",
+    "semantic_keys = ['capital-common-countries', 'capital-world', 'currency', 'city-in-state', 'family']\n",
+    "syntactic_keys = list(test_data.keys() - semantic_keys)\n",
+    "\n",
+    "# separate test_data into semantic types and syntactic types\n",
+    "semantic_test_data = {key: test_data[key] for key in semantic_keys}\n",
+    "syntactic_test_data = {key: test_data[key] for key in syntactic_keys}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d33f1d23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load different embeddings spaces\n",
+    "embeddings_50d = Embeddings.from_file(\"data/glove_50d.txt\")\n",
+    "embeddings_100d = Embeddings.from_file(\"data/glove_100d.txt\")\n",
+    "embeddings_200d = Embeddings.from_file(\"data/glove_200d.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bab9c582",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50d\n",
+      "Semantic score: 0.560\n",
+      "Syntactic score: 0.504\n",
+      "Total score: 0.524\n",
+      "100d\n",
+      "Semantic score: 0.634\n",
+      "Syntactic score: 0.628\n",
+      "Total score: 0.630\n",
+      "200d\n",
+      "Semantic score: 0.658\n",
+      "Syntactic score: 0.634\n",
+      "Total score: 0.642\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dataset_name, dataset in zip(['50d', '100d', '200d'], [embeddings_50d, embeddings_100d, embeddings_200d]):\n",
+    "    # run analogy tests on GloVe 50\n",
+    "    semantic_total_score = np.mean(list(run_analogy_test(dataset, semantic_test_data, k = 2).values()))\n",
+    "    syntactic_total_score = np.mean(list(run_analogy_test(dataset, syntactic_test_data, k = 2).values()))\n",
+    "    total_score = np.mean(list(run_analogy_test(dataset, test_data, k = 2).values()))\n",
+    "\n",
+    "    print(dataset_name)\n",
+    "    print(f'Semantic score: {semantic_total_score:.3f}')\n",
+    "    print(f'Syntactic score: {syntactic_total_score:.3f}')\n",
+    "    print(f'Total score: {total_score:.3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f412a0e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
