--- a/hw1/hw1-pset.ipynb
+++ b/hw1/hw1-pset.ipynb
@@ -613,6 +613,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1650fd38",
+   "metadata": {},
+   "source": [
+    "#### Answer 4a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "381de270",
@@ -644,7 +652,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "id": "7a26312c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store analogy question sizes\n",
+    "sizes = {}\n",
+    "for name, dataset in zip(['semantic', 'syntactic', 'total'], [semantic_test_data, syntactic_test_data, test_data]):\n",
+    "    for key in dataset.keys():\n",
+    "        sizes[f'{key}'] = (len(dataset[key]))\n",
+    "    sizes[f'{name}'] = sum(len(dataset[key]) for key in dataset.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bab9c582",
    "metadata": {},
    "outputs": [
@@ -653,40 +676,93 @@
      "output_type": "stream",
      "text": [
       "50d\n",
-      "Semantic score: 0.560\n",
-      "Syntactic score: 0.504\n",
-      "Total score: 0.524\n",
+      "semantic: 0.566\n",
+      "syntactic: 0.536\n",
+      "total: 0.550\n",
       "100d\n",
-      "Semantic score: 0.634\n",
-      "Syntactic score: 0.628\n",
-      "Total score: 0.630\n",
+      "semantic: 0.665\n",
+      "syntactic: 0.659\n",
+      "total: 0.662\n",
       "200d\n",
-      "Semantic score: 0.658\n",
-      "Syntactic score: 0.634\n",
-      "Total score: 0.642\n"
+      "semantic: 0.705\n",
+      "syntactic: 0.672\n",
+      "total: 0.687\n"
      ]
     }
    ],
    "source": [
+    "# report analogy question accuracies\n",
     "for dataset_name, dataset in zip(['50d', '100d', '200d'], [embeddings_50d, embeddings_100d, embeddings_200d]):\n",
-    "    # run analogy tests on GloVe 50\n",
-    "    semantic_total_score = np.mean(list(run_analogy_test(dataset, semantic_test_data, k = 2).values()))\n",
-    "    syntactic_total_score = np.mean(list(run_analogy_test(dataset, syntactic_test_data, k = 2).values()))\n",
-    "    total_score = np.mean(list(run_analogy_test(dataset, test_data, k = 2).values()))\n",
-    "\n",
     "    print(dataset_name)\n",
-    "    print(f'Semantic score: {semantic_total_score:.3f}')\n",
-    "    print(f'Syntactic score: {syntactic_total_score:.3f}')\n",
-    "    print(f'Total score: {total_score:.3f}')"
+    "    for rel_name, rel_data in zip(['semantic', 'syntactic', 'total'], [semantic_test_data, syntactic_test_data, test_data]):\n",
+    "        individual_scores = run_analogy_test(dataset, rel_data, k = 2)\n",
+    "        result = {key: individual_scores[key] *(sizes[key] / sizes[f'{rel_name}']) for key in individual_scores if key in sizes}\n",
+    "        sum_score = sum(result.values())\n",
+    "        print(f'{rel_name}: {sum_score:.3f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aeb5171",
+   "metadata": {},
+   "source": [
+    "#### Answer 4c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f412a0e1",
+   "execution_count": 79,
+   "id": "f9484832",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " 50d\n",
+      "france : paris :: italy : ['rome']\n",
+      "france : paris :: japan : ['tokyo']\n",
+      "france : paris :: florida : ['miami']\n",
+      "big : bigger :: small : ['larger']\n",
+      "big : bigger :: cold : ['cold']\n",
+      "big : bigger :: quick : ['quick']\n",
+      "\n",
+      " 100d\n",
+      "france : paris :: italy : ['rome']\n",
+      "france : paris :: japan : ['tokyo']\n",
+      "france : paris :: florida : ['florida']\n",
+      "big : bigger :: small : ['larger']\n",
+      "big : bigger :: cold : ['cold']\n",
+      "big : bigger :: quick : ['quick']\n",
+      "\n",
+      " 200d\n",
+      "france : paris :: italy : ['rome']\n",
+      "france : paris :: japan : ['tokyo']\n",
+      "france : paris :: florida : ['florida']\n",
+      "big : bigger :: small : ['smaller']\n",
+      "big : bigger :: cold : ['cold']\n",
+      "big : bigger :: quick : ['quick']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define analogy questions of interest\n",
+    "analogy_q = [['france', 'paris', 'italy'],\n",
+    "             ['france', 'paris', 'japan'],\n",
+    "             ['france', 'paris', 'florida'],\n",
+    "             ['big', 'bigger', 'small'],\n",
+    "             ['big', 'bigger', 'cold'],\n",
+    "             ['big', 'bigger', 'quick']]\n",
+    "\n",
+    "# find closest word to answer analogy question \n",
+    "for embedding_name, embedding in zip(['50d', '100d', '200d'], [embeddings_50d, embeddings_100d, embeddings_200d]):\n",
+    "    print('\\n', embedding_name)\n",
+    "    for a, b, c in analogy_q:\n",
+    "        target_vec = embedding[b] - embedding[a] + embedding[c]\n",
+    "        closest_word = get_closest_words(embedding, target_vec.reshape(1, -1), k = 1)[0]\n",
+    "        print(f'{a} : {b} :: {c} : {closest_word}')"
+   ]
   }
  ],
  "metadata": {
